--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Dopetrope</title>
 <meta charset="utf-8">
-<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,900,300italic" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 <script src="js/jquery-1.8.3.min.js"></script>
 <script src="css/5grid/init.js?use=mobile,desktop,1000px&amp;mobileUI=1&amp;mobileUI.theme=none&amp;mobileUI.titleBarOverlaid=1&amp;viewport_is1000px=1060"></script>
 <script src="js/jquery.dropotron-1.2.js"></script>
