--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="row">
       <div class="12u">
         <section id="header">
-          <h1><a href="#">Explorer</a></h1>
+          <h1><a href="#">Mundo Livre 4x4</a></h1>
           <nav id="nav" class="mobileUI-site-nav">
             <ul>
               <li class="current_page_item"><a href="index.html">Início</a></li>
@@ -54,11 +54,13 @@
     </div>
     <div class="row">
       <div class="12u">
-        <section id="banner"> <a href="#"> <span class="image image-full"><img src="images/pic01.jpg" alt=""></span>
+        <section id="banner"> <a href="#"> <span class="image image-full"><img src="images/banner.jpg" alt=""></span>
           <header>
-            <h2>Howdy. This is Dopetrope.</h2>
-            <span class="byline">A responsive site template by HTML5 Up!</span> </header>
-          </a> </section>
+            <h2>Quer fazer trilhas?</h2>
+            <span class="byline">Veja tudo que vai precisar saber antes de encarar umas trilhas</span> </header>
+          </a>
+        </section>
+        <div class="row"></div>
       </div>
     </div>
     <div class="row">
@@ -111,28 +113,31 @@
               <div class="4u">
                 <section class="box"> <a href="#" class="image image-full"><img src="images/pic002.jpg" alt=""></a>
                   <header>
-                    <h3>Barragem de Acauã - Itatuba/PB</h3>
+                    <h3>Barragem de Acauã - Itatuba</h3>
+                    <span class="byline">Data: 07/12/2024</span>
                   </header>
                   <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
                   <footer> <a href="#" class="button button-alt">Saiba Mais</a> </footer>
                 </section>
               </div>
               <div class="4u">
-                <section class="box"> <a href="#" class="image image-full"><img src="images/pic03.jpg" alt=""></a>
+                <section class="box"> <a href="#" class="image image-full"><img src="images/pic003.jpg" alt=""></a>
                   <header>
-                    <h3>Sed etiam lorem nulla</h3>
+                    <h3>Pedra do Touro - Queimadas</h3>
+                    <span class="byline">Posted 45 minutes ago</span>
                   </header>
                   <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-                  <footer> <a href="#" class="button button-alt">Find out more</a> </footer>
+                  <footer> <a href="#" class="button button-alt">Saiba Mais</a> </footer>
                 </section>
               </div>
               <div class="4u">
-                <section class="box"> <a href="#" class="image image-full"><img src="images/pic04.jpg" alt=""></a>
+                <section class="box"> <a href="#" class="image image-full"><img src="images/pic004.jpg" alt=""></a>
                   <header>
-                    <h3>Consequat et tempus</h3>
+                    <h3>Praia Barra do Abiaí - Pitimbu</h3>
+                    <span class="byline">Posted 45 minutes ago</span>
                   </header>
                   <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-                  <footer> <a href="#" class="button button-alt">Find out more</a> </footer>
+                  <footer> <a href="#" class="button button-alt">Saiba Mais</a> </footer>
                 </section>
               </div>
             </div>
